update getFirst